--- a/FE/src/app/globals.css
+++ b/FE/src/app/globals.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
